--- a/src/styles/ui/_links.scss
+++ b/src/styles/ui/_links.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   font-family: var(--font-manrope), sans-serif;
-  font-size: 16px; /* МЕНЯТЬ ЗДЕСЬ: размер шрифта ссылок */
+  font-size: 18px; /* МЕНЯТЬ ЗДЕСЬ: размер шрифта ссылок */
   line-height: 1;
   font-weight: 500;
   letter-spacing: -0.01em;
